Task color list settings is now fully functional. Should be a stable nightly. Also incremented build number.